<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context="com.example.alexfanning.silentplaces.activities.DetailActivity">


    <Button
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/tv_margin"
        android:id="@+id/btn_select_location"
        android:onClick="btnSelect_Clicked"
        android:text="@string/btn_select"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        />

    <TextView
        style="@style/tvSmall"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:id="@+id/place_name"
        />
    <TextView
        style="@style/tvSmall"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:id="@+id/place_add"
        />

    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:hint="@string/et_descript"
        android:layout_margin="@dimen/tv_margin"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/et_desc"
        />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="horizontal"
        android:layout_margin="@dimen/tv_margin"

        android:weightSum="2"
        >
        <TextView
            style="@style/tvSmall"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:text="@string/tv_silent_mode"
            android:layout_weight="1"
            />
        <Spinner
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:id="@+id/spinner_detail"
            android:layout_margin="@dimen/tv_margin"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/tv_margin"
        android:gravity="bottom|end"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_add"
            android:onClick="addBtn_clicked"
            android:id="@+id/btnAdd"
            />
        <Button
            android:layout_width="wrap_content"
            android:text="@string/btn_clear"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            />

    </LinearLayout>
</LinearLayout>
